--- a/Mobile App/football-eye-q/data/index.html
+++ b/Mobile App/football-eye-q/data/index.html
@@ -58,7 +58,7 @@
 
     <!-- Patterns Page -->
     <div id="patterns-page">
-      <!-- ✅ New session input section -->
+      <!-- New session input section -->
       <div class="session-input-container">
         <label for="session-code">Enter Session Code:</label>
         <input
